fix: change color of body and conversion pannel to make it more visible

--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
 }
 
 body {
-    background-color: var(--color-navy-1);
+    background-color: var(--color-navy-2);
     color: white;
     font-family: Inter, sans-serif;
 }
@@ -84,4 +84,5 @@ button {
     width: 500px;
     padding: 30px 0;
     gap: 20px;
+    background-color: var(--color-navy-1);
 }
